# wektor

./: README.md
wektor/: CMakeLists.txt  main.c
wektor/include/: header.h
